--- a/Anchor.toml
+++ b/Anchor.toml
@@ -18,4 +18,4 @@ cluster = "https://api.devnet.solana.com"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run jest --preset ts-jest"
+test = "yarn run jest --preset ts-jest --detectOpenHandles"
